update/fix: auth server, lógica melhorada
